# pipeable

./: .gitattributes  .gitignore  .travis.yml  CMakeLists.txt  LICENSE  README.md  appveyor.yml  build.sh  conanfile.py
catch2/: CMakeLists.txt
include/pipeable/: data_generator.hpp  data_source.hpp  generator.hpp  guarded_data_generator.hpp  pipeable.hpp
include/pipeable/internal/: pipeable_internal.hpp  type_traits.hpp
tests/: data_generator_tests.cpp  data_source_tests.cpp  generator_tests.cpp  guarded_data_generator_tests.cpp  pipeable_tests.cpp
